--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 LimeyBoy Python Modules Collections.
 https://github.com/LimerBoy
 
-thanks to him for the knowledge we will use this only for learning.
+thanks to him for the knowledge we will use this for learning.
